v0.4.x/_sources/reference/fury.window.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`window`
=============
.. automodule:: fury.window

.. currentmodule:: fury.window
.. autosummary::

   CustomInteractorStyle
   InTemporaryDirectory
   Renderer
   Scene
   ShowManager
   basestring
   add
   analyze_renderer
   analyze_scene
   analyze_snapshot
   antialiasing
   asbytes
   clear
   enable_stereo
   record
   ren
   renderer
   rm
   rm_all
   show
   snapshot
   warn


.. currentmodule:: fury.window


:class:`CustomInteractorStyle`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: CustomInteractorStyle
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`InTemporaryDirectory`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: InTemporaryDirectory
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Renderer`
~~~~~~~~~~~~~~~~~


.. autoclass:: Renderer
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Scene`
~~~~~~~~~~~~~~


.. autoclass:: Scene
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ShowManager`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ShowManager
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`basestring`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: basestring
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

add
~~~

.. autofunction:: add

analyze_renderer
~~~~~~~~~~~~~~~~

.. autofunction:: analyze_renderer

analyze_scene
~~~~~~~~~~~~~

.. autofunction:: analyze_scene

analyze_snapshot
~~~~~~~~~~~~~~~~

.. autofunction:: analyze_snapshot

antialiasing
~~~~~~~~~~~~

.. autofunction:: antialiasing

asbytes
~~~~~~~

.. autofunction:: asbytes

clear
~~~~~

.. autofunction:: clear

enable_stereo
~~~~~~~~~~~~~

.. autofunction:: enable_stereo

record
~~~~~~

.. autofunction:: record

ren
~~~

.. autofunction:: ren

renderer
~~~~~~~~

.. autofunction:: renderer

rm
~~

.. autofunction:: rm

rm_all
~~~~~~

.. autofunction:: rm_all

show
~~~~

.. autofunction:: show

snapshot
~~~~~~~~

.. autofunction:: snapshot

warn
~~~~

.. autofunction:: warn

